--- a/oct.css
+++ b/oct.css
@@ -15,6 +15,13 @@ body {
     color: #ffffff;
 }
 
+@media (max-width: 768px) {
+  
+    .letter-container {
+        padding: 20px; 
+    }
+}
+
 .container {
     display: flex;
     flex-direction: column;
