--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,13 @@ body {
     overflow-x: hidden;
 }
 
+@media (max-width: 768px) {
+  
+    .letter-container {
+        padding: 20px; 
+    }
+}
+
 .title {
     background-image: linear-gradient(to right, #9e2d2d, #381717);
     color: white;
